# poker_solvers

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
src/: lib.rs
src/core/: card.rs  card_bit_set.rs  card_iter.rs  deck.rs  flat_deck.rs  flat_hand.rs  hand.rs  mod.rs  player_bit_set.rs  rank.rs
