[package]
name = "poker_solvers"
version = "0.1.0"
authors = ["Nikita Mingazov nikitamingazov@protomail.com"]
description = "solvers for poker games"
license = "Unlicense"
repository = "https://github.com/nikitamingazov/poker_solvers"
edition = "2024"

[dependencies]
rand = "~0.9.1"
paste = "~1.0.15"
# rs_poker = "~4.1.0"
thiserror = "~2.0.12" # for rs_poker core
serde = { version = "~1.0.219", features = ["derive", "serde_derive"] }
serde_json = "~1.0.140"
