[package]
name = "poker_solvers"
version = "0.1.0"
authors = ["Nikita Mingazov nikitamingazov@protomail.com"]
description = "solvers for poker games"
license = "Unlicense"
repository = "https://github.com/nikitamingazov/poker_solvers"
edition = "2024"

[dependencies]
rand = "~0.9.1"
itertools = "~0.14.0"
rs_poker = { git = "https://github.com/elliottneilclark/rs-poker.git", features = ["serde"] }
serde = { version = "~1.0.219", features = ["derive", "serde_derive"] }
serde_json = "~1.0.140"
